# inference

./: .env  Cargo.toml  learning.md
configuration/: base.yaml
src/: configuration.rs  main.rs  startup.rs
src/routes/: mod.rs
src/routes/events/: mod.rs
src/routes/events/fire/: get_fire_history.rs  get_incident.rs  get_live_feed.rs  mod.rs  refresh_fires.rs
