[package]
name = "inference"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
config = "0.15.24"
reqwest = "0.13.4"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.150"
tokio = "1.52.3"
unicode-segmentation = "1.13.3"
uuid = { version = "1.23.3", features = ["v4"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

